feat: add opencode and keepassxc configs, automation scripts and docs
- Add opencode config (opencode.jsonc, themes)
- Add keepassxc config (keepassxc.ini only, no .kdbx databases)
- Update .gitignore to exclude sensitive files and node_modules
- Add install-packages.sh - automated package installer for Arch
- Add stow.sh - interactive stow manager with install/remove/restow/status
- Add MAINTENANCE.md - comprehensive guide for dotfiles management

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@ fish/.config/fish/fish_variables
 # Yazi plugins (reinstall with ya pack)
 yazi/.config/yazi/plugins/
 
+# Opencode
+opencode/.config/opencode/node_modules
+opencode/.config/opencode/bun.lock
+
+# KeePassXC databases
+keepassxc/.config/keepassxc/*.kdbx
+
 # Sensitive files
 *.pem
 *.key
