--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -19,3 +19,6 @@ map ctrl+shift+enter launch --cwd=current --type=os-window
 allow_remote_control yes
 term xterm-kitty
 override_colors never
+
+
+allow_remote_control yes
