--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -4,8 +4,7 @@ run = [ '''
 	shell 'for path in "$@"; do echo "file://$path"; done | wl-copy -t text/uri-list' --confirm
 ''', "yank" ]
 
-
 [[mgr.prepend_keymap]]
-on   = "t"
-run  = "shell --block --confirm 'kitty --working-directory $PWD'"
-desc = "Open Kitty in the current directory"
+on  = "<C-t>"
+run = "shell --orphan -- kitty --single-instance"
+desc = "Abrir Kitty en el CWD"
