--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -1,65 +1,94 @@
+
 [opener]
-image = [
-    { run = 'feh --geometry 800x600 --scale-down --auto-zoom "$@"',orphan = true, desc = "Abrir imagen con feh" }
+# Fallback del sistema (Linux): útil para binarios, office, etc.
+open = [
+  { run = 'xdg-open %s', orphan = true, desc = "Abrir (sistema)", for = "linux" },
 ]
-video = [
-    { run = 'vlc "$@"', orphan = true, desc = "Reproducir con VLC", for = "unix" }
-]
-pdf = [
-    { run = 'zathura "$@"', orphan = true, desc = "Ver con Zathura", for = "unix" }
-]
-extract = [
-    { run = '7z x "$@"', desc = "Extraer archivo", for = "unix" }
-]
+
+# Editor (bloqueante, interactivo)
 edit = [
-    { run = 'nvim "$@"', block = true, desc = "Editar con Nvim", for = "unix" }
+  { run = 'nvim %s', block = true, desc = "Editar con Neovim", for = "unix" },
 ]
+
+# Imágenes (tu elección: feh; ojo que es X11, pero lo dejo tal cual)
+image = [
+  { run = 'feh --geometry 800x600 --scale-down --auto-zoom %s', orphan = true, desc = "Abrir imagen (feh)", for = "unix" },
+]
+
+video = [
+  { run = 'vlc %s', orphan = true, desc = "Reproducir video (VLC)", for = "unix" },
+]
+
 audio = [
-    { run = 'vlc "$@"', orphan = true, desc = "Reproducir audio con VLC", for = "unix" }
+  { run = 'vlc %s', orphan = true, desc = "Reproducir audio (VLC)", for = "unix" },
+]
+
+pdf = [
+  { run = 'zathura %s', orphan = true, desc = "Ver PDF (Zathura)", for = "unix" },
+]
+
+extract = [
+  { run = '7z x %s', desc = "Extraer aquí (7z)", for = "unix" },
 ]
 
 
 [open]
 rules = [
-    # Reglas para archivos de texto (MIME y extensiones)
-    { mime = "text/*", use = "edit" },
-    { name = "*.txt", use = "edit" },
-    { name = "*.md", use = "edit" },
-    { name = "*.py", use = "edit" },
-    { name = "*.rs", use = "edit" },
-    { name = "*.toml", use = "edit" },
-    # Añade más extensiones de texto si las necesitas
-    
+  # 1) Formatos especiales primero (prioridad)
+  { mime = "application/pdf", use = "pdf" },
 
-    # Reglas para imágenes
-    { mime = "image/*", use = "image" },
-    
+  { mime = "image/*", use = "image" },
+  { mime = "video/*", use = "video" },
+  { mime = "audio/*", use = "audio" },
 
-    # Reglas para videos
-    { mime = "video/*", use = "video" },
+  # Archivos comprimidos (por extensión)
+  { url = "*.7z",     use = "extract" },
+  { url = "*.zip",    use = "extract" },
+  { url = "*.rar",    use = "extract" },
+  { url = "*.tar",    use = "extract" },
+  { url = "*.tgz",    use = "extract" },
+  { url = "*.tar.gz", use = "extract" },
+  { url = "*.tbz2",   use = "extract" },
+  { url = "*.tar.bz2",use = "extract" },
+  { url = "*.txz",    use = "extract" },
+  { url = "*.tar.xz", use = "extract" },
 
-    # Reglas para PDFs
-    { mime = "application/pdf", use = "pdf" },
+  # 2) TODO texto va a nvim (tu requisito)
+  { mime = "text/*", use = "edit" },
 
-    # Reglas para audio
-    { mime = "audio/*", use = "audio" },
-    
+  # Extra: mimes "texto" que a veces no caen en text/*
+  { mime = "application/json", use = "edit" },
+  { mime = "application/xml",  use = "edit" },
+  { mime = "application/x-yaml", use = "edit" },
 
-    # Reglas para archivos comprimidos
-    { name = "*.zip", use = "extract" },
-    { name = "*.tar", use = "extract" },
-    { name = "*.tar.gz", use = "extract" },
-    { name = "*.tgz", use = "extract" },
-    { name = "*.bz2", use = "extract" },
-    { name = "*.xz", use = "extract" },
-    { name = "*.7z", use = "extract" },
-    { name = "*.rar", use = "extract" },
+  # Extensiones típicas que suelen ser texto (por si file(1) / mime falla)
+  { url = "*.md",   use = "edit" },
+  { url = "*.txt",  use = "edit" },
+  { url = "*.toml", use = "edit" },
+  { url = "*.yaml", use = "edit" },
+  { url = "*.yml",  use = "edit" },
+  { url = "*.json", use = "edit" },
+  { url = "*.xml",  use = "edit" },
+  { url = "*.ini",  use = "edit" },
+  { url = "*.conf", use = "edit" },
+  { url = "*.log",  use = "edit" },
+  { url = "*.sh",   use = "edit" },
+  { url = "*.py",   use = "edit" },
+  { url = "*.rs",   use = "edit" },
+  { url = "*.go",   use = "edit" },
+  { url = "*.java", use = "edit" },
+  { url = "*.kt",   use = "edit" },
+  { url = "*.c",    use = "edit" },
+  { url = "*.h",    use = "edit" },
+  { url = "*.cpp",  use = "edit" },
+  { url = "*.hpp",  use = "edit" },
 
-    # Reglas generales para archivos
-    { name = "*", use = "edit" }    
-
+  # 3) Fallback final: si no es texto ni coincide con nada, sistema
+  { url = "*", use = "open" },
 ]
+
 
 [mgr]
 sort_by = "mtime"
 sort_reverse = true
+
