--- a/opencode/.config/opencode/opencode.jsonc
+++ b/opencode/.config/opencode/opencode.jsonc
@@ -1,5 +1,12 @@
 {
   "$schema": "https://opencode.ai/config.json",
+  "plugin": ["opencode-antigravity-auth@beta", "opencode-mystatus@1.0.1"],
+  "command": {
+    "mystatus": {
+      "description": "Query quota usage for all AI accounts",
+      "template": "Use the mystatus tool to query quota usage. Return the result as-is without modification."
+    }
+  },
   "lsp": {
     "pyright": {
       "command": [
