--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,6 +45,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
+env = ELECTRON_OZONE_PLATFORM_HINT, wayland
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us, latam
