--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -3,7 +3,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
         "source": "~/.config/fastfetch/logo.png",
-        "type": "kitty-direct",
+        "type": "chafa",
         // "width": 20,
         // "height": 50,
         "padding": {
