--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -109,7 +109,7 @@
     "interval": 10,
     "format": " {percentage}%",
     "max-length": 30,
-    "on-click": "kitty -e btop"
+    "on-click": "ghostty -e btop"
   },
 
   "custom/power": {
@@ -117,4 +117,3 @@
     "on-click": "wlogout"
   }
 }
-
