Revert "ghostty migration"
This reverts commit e6b2e82abda371b50555faecfa34f40eae7d8db4.

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -109,7 +109,7 @@
     "interval": 10,
     "format": " {percentage}%",
     "max-length": 30,
-    "on-click": "ghostty -e btop"
+    "on-click": "kitty -e btop"
   },
 
   "custom/power": {
@@ -117,3 +117,4 @@
     "on-click": "wlogout"
   }
 }
+
