--- a/gtk/.config/gtk-4.0/settings.ini
+++ b/gtk/.config/gtk-4.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=gruvbox-dark-gtk
 gtk-icon-theme-name=Papirus
-gtk-font-name=JetBrainsMono Nerd Font 11
+gtk-font-name=FiraCode Nerd Font Mono Light 11
 gtk-application-prefer-dark-theme=1
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
@@ -15,3 +15,4 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=none
+
