--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -31,8 +31,8 @@ exec-once = wl-paste --type image --watch cliphist store
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you us
-$terminal = ghostty
-$fileManager = ghostty -e yazi
+$terminal = kitty
+$fileManager = kitty -e yazi
 $menu = rofi -show drun
 $mainMod = SUPER
 
@@ -149,9 +149,9 @@ device {
 }
 
 # Example windowrule v1
-# windowrule = float, ^(com\.mitchellh\.ghostty)$
+# windowrule = float, ^(kitty)$
 # Example windowrule v2
-# windowrulev2 = float,class:^(com\.mitchellh\.ghostty)$,title:^(Ghostty)$
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = suppress_event maximize, match:class .* # You'll probably like this.
 
@@ -264,7 +264,7 @@ bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
 
 # Shortcut to neovim
-bind = $mainMod, N, exec, ghostty -e nvim
+bind = $mainMod, N, exec, kitty nvim
 
 # bind to level up or down the volume of spotify
 bind = $mainMod, U, exec, playerctl -p spotify volume 0.1-
