--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -79,7 +79,7 @@ input-field {
     inner_color = rgba(60, 56, 54, 0.35)
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    font_family = JetBrainsMono Nerd Font
+    font_family =  JetBrainsMono Nerd Font
     placeholder_text = <i><span foreground="##ffffff99">Use Me</span></i>
     hide_input = false
     position = 0, -140
@@ -93,7 +93,7 @@ label {
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/songdetail.sh)" 
     color = rgba(235, 219, 178, .75)
     font_size = 16
-    font_family = JetBrainsMono Nerd Font
+    font_family = JetBrains Mono Nerd 
     position = 0, 80
     halign = center
     valign = bottom
