--- a/qt/.config/qt5ct/qt5ct.conf
+++ b/qt/.config/qt5ct/qt5ct.conf
@@ -5,8 +5,8 @@ standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed="JetBrainsMono Nerd Font,12,-1,5,50,0,0,0,0,0"
-general="JetBrainsMono Nerd Font,12,-1,5,50,0,0,0,0,0"
+fixed="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
+general="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
 
 [Interface]
 activate_item_on_single_click=1
