--- a/qt/.config/qt6ct/qt6ct.conf
+++ b/qt/.config/qt6ct/qt6ct.conf
@@ -5,8 +5,8 @@ standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed="JetBrainsMono Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="JetBrainsMono Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="FiraCode Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="FiraCode Nerd Font,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
