--- a/opencode/.config/opencode/opencode.jsonc
+++ b/opencode/.config/opencode/opencode.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "plugin": ["opencode-antigravity-auth@beta", "opencode-mystatus@1.0.1", "@franlol/opencode-md-table-formatter@0.0.3"],
+  "plugin": ["opencode-antigravity-auth@latest", "opencode-mystatus@1.0.1", "@franlol/opencode-md-table-formatter@0.0.3"],
     "command": {
     "mystatus": {
       "description": "Query quota usage for all AI accounts",
@@ -27,8 +27,8 @@
   },
   "agent": {
     "explore": {
-      "model": "google/antigravity-gemini-3-flash",
-      "variant": "high",
+      "model": "openai/gpt-5.2",
+      "variant": "none",
       "tools": {
         "skill": true
       },
@@ -78,19 +78,6 @@
         "skill": true
       },
       "prompt": "Load and follow the instructions from the 'security-agent' skill."
-    },
-    "review": {
-      "description": "Reviews the codebase and provides feedback on code quality, security, and performance.",
-      "mode": "primary",
-      "tools": {
-        "read": true,
-        "glob": true,
-        "grep": true,
-        "webfetch": true,
-        "bash": true,
-        "skill": true
-      },
-      "prompt": "Load and follow the instructions from the 'review' skill."
     },
     "review-agent": {
       "description": "Reviews code and actively applies fixes for security, performance, and maintainability standards.",
