--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,4 @@
-# font_family JetBrainsMono Nerd Font
-font_family FiraCode Nerd Font
+font_family JetBrainsMono Nerd Font
 font_size 14
 window_padding_width 5.0
 
