feat(scripts): add clean-arch automation, notifications and systemd setup

--- a/scripts/clean_arch.conf
+++ b/scripts/clean_arch.conf
@@ -1,1 +1,20 @@
-/home/nacho/Documents/scripts/clean_arch.conf
+# clean_arch.fish config example
+# Values here can be overridden by CLI flags.
+
+PROFILE=balanced
+JOURNAL_RETENTION=7d
+TEMP_FILE_AGE=7
+PACMAN_VERSIONS_KEEP=1
+ZED_NODE_VERSIONS_KEEP=1
+DOCKER_PRUNE_ALL=0
+MAX_DELETE_GB=0
+NO_SPINNER=1
+
+# Task toggles (1 enabled, 0 disabled)
+DO_ORPHANS=1
+DO_CACHES=1
+DO_DOCKER=1
+DO_LOGS=1
+DO_TEMPS=1
+DO_TRASH=1
+DO_EXTRAS=1
